# Udemy-DSA-Courses

./: .gitignore  Readme.md  courses.txt
Mastering_Critical_Skills/: courses.txt  (+1 more)
Mastering_Critical_Skills/Data_Structures/Section_16_Char_Arrays/: CMakeLists.txt  practice_01.cpp  practice_02.cpp  practice_03.cpp  problem_01.cpp  problem_02.cpp
Mastering_Critical_Skills/Skills/: CMakeLists.txt  Readme.md  ToDo.txt  courses.txt  print_compiler.cpp  test.cpp
Mastering_Critical_Skills/Skills/Section_03_Printing/: CMakeLists.txt  HW_01_GuessTheOutput.cpp  Section_03_HW_01_GuessTheOutput.cpp  Section_03_HW_02_PrintPyramids.cpp  Section_03_HW_03_FindTheErrors.cpp  homework_01.cpp  homework_01_Guess_the_run_time_output.cpp  homework_01_guesss_the_run_time_output.cpp  homework_02.cpp  homework_02_Write_code_to_print_the_following.cpp  homework_02_write_code_to_print_the_following_.cpp  homework_03.cpp  homework_03_Find_all_the_errors_and_fix_them.cpp
Mastering_Critical_Skills/Skills/Section_03_Printing/cmake/: Docs.cmake
Mastering_Critical_Skills/Skills/Section_04_Data_Types_and_Variables/: CMakeLists.txt  Section_04_HW_01_Math_Operations.cpp  Section_04_HW_02_Student_Grades.cpp  Section_04_HW_03_Even_Odd_Sum.cpp  Section_04_HW_06_Swap_Three_Numbers.cpp  Section_04_HW_07_Print_Me.cpp  Section_04_HW__03_Even_Odd_Sum.cpp  homework_01.cpp  homework_02.cpp  homework_03.cpp  homework_04.cpp  homework_05.cpp  homework_06.cpp  homework_07.cpp  homework_08.cpp
Mastering_Critical_Skills/Skills/Section_04_Data_Types_and_Variables/01_Easy_Homework/: homework_01_math_operations.cpp  homework_02_student_grades.cpp  homework_03_even_odd_sum.cpp
Mastering_Critical_Skills/Skills/Section_04_Data_Types_and_Variables/02_Medium_Homework/: homework_01_Guess_the_Output.cpp  homework_02_swapping_2_numbers.cpp
Mastering_Critical_Skills/Skills/Section_04_Data_Types_and_Variables/03_Hard_Homework/: homework_01_swapping_3_numbers.cpp  homework_02_print_me.cpp  homework_03_sum_numbers_from_1_to_n.cpp
Mastering_Critical_Skills/Skills/Section_04_Data_Types_and_Variables/Easy/: CMakeLists.txt  Section_04_HW_01_Math_Operations.cpp  Section_04_HW_02_Student_Grades.cpp  Section_04_HW_03_Even_Odd_Sum.cpp
Mastering_Critical_Skills/Skills/Section_04_Data_Types_and_Variables/Hard/: CMakeLists.txt  Section_04_HW_06_Swap_Three_Numbers.cpp  Section_04_HW_07_Print_Me.cpp
Mastering_Critical_Skills/Skills/Section_04_Data_Types_and_Variables/Medium/: CMakeLists.txt
Mastering_Critical_Skills/Skills/Section_04_Data_Types_and_Variables/easy/: homework_02_Student_grades.cpp
Mastering_Critical_Skills/Skills/Section_04_Data_Types_and_Variables/hard/: homework_01_Swapping_3_Numbers.cpp
Mastering_Critical_Skills/Skills/Section_04_Data_Types_and_Variables/medium/: homework_01_Guess_the_Output.cpp  homework_02_Swapping_2_Numbers.cpp
Mastering_Critical_Skills/Skills/Section_05_Operators/: .clang-tidy  CMakeLists.txt  homework_01.cpp  homework_02.cpp  homework_03.cpp  homework_04.cpp  homework_05.cpp  homework_06.cpp  homework_07.cpp  homework_08.cpp  homework_09.cpp  homework_10.cpp  homework_11.cpp  homework_12.cpp  homework_13.cpp  homework_14.cpp
Mastering_Critical_Skills/Skills/Section_05_Operators/01_Operators/: homework_01_Guess_the_Output.cpp  homework_03_Guess_the_Output.cpp
Mastering_Critical_Skills/Skills/Section_05_Operators/01_operators/: homework_01_Guess_the_Output.cpp
Mastering_Critical_Skills/Skills/Section_05_Operators/02_Logical_Operators/: homework_01_Guess_the_Output.cpp
Mastering_Critical_Skills/Skills/Section_05_Operators/02_logical_operators/: homework_01_Guess_the_Output.cpp
Mastering_Critical_Skills/Skills/Section_05_Operators/Easy/: CMakeLists.txt  Section_05_HW_02_Guess_the_Output.cpp  Section_05_HW_03_Guess_the_Output.cpp  homework_03.cpp  homework_05.cpp  homework_06.cpp  homework_07.cpp
Mastering_Critical_Skills/Skills/Section_05_Operators/Hard/: CMakeLists.txt  Section_05_HW_14_Years.cpp  homework_13.cpp
Mastering_Critical_Skills/Skills/Section_05_Operators/Medium/: CMakeLists.txt  Section_05_HW_10_Is_Even.cpp  Section_05_HW_11_Sum_Last_Three_Digits.cpp  Section_05_HW_12_Forth_Last_Digit.cpp
Mastering_Critical_Skills/Skills/Section_06_Selection/: CMakeLists.txt  homework_01.cpp  homework_02.cpp  homework_03.cpp  homework_04.cpp  homework_05.cpp  homework_06.cpp  homework_07.cpp  homework_08.cpp
Mastering_Critical_Skills/Skills/Section_07_Loops/: CMakeLists.txt  homework_01.cpp  homework_02.cpp  homework_03.cpp  homework_04.cpp  homework_05.cpp  homework_06.cpp  homework_07.cpp  homework_08.cpp  homework_09.cpp  homework_10.cpp  homework_11.cpp  homework_12.cpp  homework_13.cpp  homework_14.cpp  homework_15.cpp  homework_16.cpp  homework_17.cpp  homework_18.cpp  homework_19.cpp
Mastering_Critical_Skills/Skills/Section_08_1D_Arrays/: CMakeLists.txt  practice_2.cpp  problem_01.cpp  problem_02.cpp  problem_03.cpp  problem_04.cpp  problem_05.cpp  problem_06.cpp  problem_07.cpp  problem_08.cpp  problem_09.cpp  problem_10.cpp  problem_11.cpp  problem_12.cpp  problem_13.cpp  problem_14.cpp  problem_16.cpp
Mastering_Critical_Skills/Skills/Section_09_Char_Arrays/: CMakeLists.txt  homework_01.cpp  homework_02.cpp  homework_03.cpp  homework_04.cpp  homework_05.cpp  homework_06.cpp  homework_07.cpp  homework_08.cpp  practice_02.cpp  practice_03.cpp
Mastering_Critical_Skills/Skills/Section_10_Mulltidimensional_Arrays/: CMakeLists.txt
Mastering_Critical_Skills/Skills/Section_10_Multidimensional_Arrays/: .tic_tac_toe.cpp.swp  CMakeLists.txt  tic_tac_toe.cpp
Mastering_Critical_Skills/Skills/Section_11_Functions/: CMakeLists.txt
Mastering_Critical_Skills/Skills/Section_12_Recursive_Functions/: CMakeLists.txt
Mastering_Critical_Skills/Skills/Section_14_Structures/: CMakeLists.txt
Mastering_Critical_Skills/Skills/Section_17_STL/: CMakeLists.txt
Mastering_Critical_Skills/Skills/cmake/: AddGitSubmodule.cmake  CodeCoverage.cmake  ConfigSafeGuards.cmake  LTO.cmake  Sanitizer.cmake  Tools.cmake  Warnings.cmake
Mastering_Critical_Skills/Skills/tests/: CMakeLists.txt  main.cpp
(+733 files in other folders)
