cmake_minimum_required(VERSION 3.22)

project(
  DSA
  VERSION 1.0.0
  LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(run_practice_01 practice_01.cpp)
# add_executable(run_practice_02 practice_02.cpp)

# Easy Problems add_executable(run_problem_01 problem_01.cpp)
# add_executable(run_problem_02 problem_02.cpp) add_executable(run_problem_03
# problem_03.cpp) add_executable(run_problem_04 problem_04.cpp)
# add_executable(run_problem_05 problem_05.cpp)

# Medium Problems add_executable(run_problem_06 problem_06.cpp)
# add_executable(run_problem_07 problem_07.cpp) add_executable(run_problem_08
# problem_08.cpp) add_executable(run_problem_09 problem_09.cpp)
# add_executable(run_problem_10 problem_10.cpp) add_executable(run_problem_11
# problem_11.cpp)

# Hard problems add_executable(run_problem_12 problem_12.cpp)
# add_executable(run_problem_13 problem_13.cpp) add_executable(run_problem_14
# problem_14.cpp) add_executable(run_problem_15 problem_15.cpp)
# add_executable(run_problem_16 problem_16.cpp)
