# Easy Problems
add_executable(run_homework_05_01 homework_01.cpp)
add_executable(run_homework_05_02 homework_02.cpp)
add_executable(run_homework_05_03 homework_03.cpp)
add_executable(run_homework_05_04 homework_04.cpp)
add_executable(run_homework_05_05 homework_05.cpp)
add_executable(run_homework_05_06 homework_06.cpp)
add_executable(run_homework_05_07 homework_07.cpp)
add_executable(run_homework_05_08 homework_08.cpp)
add_executable(run_homework_05_09 homework_09.cpp)

# Medium Problems
add_executable(run_homework_05_10 homework_10.cpp)
add_executable(run_homework_05_11 homework_11.cpp)
add_executable(run_homework_05_12 homework_12.cpp)

# Hard Problems
add_executable(run_homework_05_13 homework_13.cpp)
add_executable(run_homework_05_14 homework_14.cpp)
