cmake_minimum_required(VERSION 3.22)

project(
  Variables
  VERSION 1.0.0
  LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Easy Problems
add_executable(run_homework_07_01 homework_01.cpp)
add_executable(run_homework_07_02 homework_02.cpp)
add_executable(run_homework_07_03 homework_03.cpp)
add_executable(run_homework_07_04 homework_04.cpp)
add_executable(run_homework_07_05 homework_05.cpp)

# Medium Problems
add_executable(run_homework_07_06 homework_06.cpp)
add_executable(run_homework_07_07 homework_07.cpp)
add_executable(run_homework_07_08 homework_08.cpp)
add_executable(run_homework_07_09 homework_09.cpp)

# Hard Problems
add_executable(run_homework_07_10 homework_10.cpp)
add_executable(run_homework_07_11 homework_11.cpp)
add_executable(run_homework_07_12 homework_12.cpp)
add_executable(run_homework_07_13 homework_13.cpp)
add_executable(run_homework_07_14 homework_14.cpp)
add_executable(run_homework_07_15 homework_15.cpp)
add_executable(run_homework_07_16 homework_16.cpp)
add_executable(run_homework_07_17 homework_17.cpp)
add_executable(run_homework_07_18 homework_18.cpp)
add_executable(run_homework_07_19 homework_19.cpp)
