add_executable(run_homework_05_01 Section_05_HW_01_Guess_the_Output.cpp)
add_executable(run_homework_05_02 homework_02.cpp)
add_executable(run_homework_05_03 homework_03.cpp)
add_executable(run_homework_05_04 homework_04.cpp)
add_executable(run_homework_05_05 homework_05.cpp)
add_executable(run_homework_05_06 homework_06.cpp)
add_executable(run_homework_05_07 homework_07.cpp)
add_executable(run_homework_05_08 homework_08.cpp)
add_executable(run_homework_05_09 homework_09.cpp)
