add_executable(run_practice_07_01 Section_07_Practice_01_Numbers_Divisible_by_3.cpp)
add_executable(run_practice_07_02 Section_07_Practice_02_Power_Function.cpp)
add_executable(run_practice_07_03 Section_07_Practice_03_Number_of_Digits.cpp)
add_executable(run_practice_07_04 Section_07_Practice_04_Special_Sum.cpp)
add_executable(run_practice_07_05 Section_07_Practice_05_Pair_of_Numbers.cpp)
add_executable(run_practice_07_06 Section_07_Practice_06_Triple_of_Numbers.cpp)
add_executable(run_practice_07_07 Section_07_Practice_07_Fibonacci.cpp)